Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
5.4.0
-
-
09e39ffb6fbfbe5f294164ec797c35c300d572e4
Description
When opening a Virtual Keyboard on Windows Phone, the reported pixel height is too small compared to the physical pixels on my device. (Nokia 920) I would suspect we are not correctly applying the scaling factor here.
To query for the height, I use the following code in QML:
Qt.inputMethod.keyboardRectangle.height
Attachments
Issue Links
- relates to
-
QTBUG-44151 Opening a Virtual Keyboard can cover text fields on Windows Phone
-
- Closed
-