winrt: set correct virtual keyboard size

This is done by multiplying by the DIP scale factor.

Task-number: QTBUG-44152
Change-Id: I587a66f1a2f7fa3a713c279f5d877e6acb844620
Reviewed-by: Andrew Knight <qt@panimo.net>